--- a/tools/themes/dark/style.css
+++ b/tools/themes/dark/style.css
@@ -1,5 +1,6 @@
 * {margin:0; padding:0;}
-html,body {Width:100vw;Height:100vh;Display:Inline-Flex;Justify-Content:Center;Text-Align:Center;Align-Items:Center;Margin:0%;Padding:0%;Overflow:Hidden;}
+a {Color:rgba(255,255,255,0.8);Text-Decoration:None;}
+html,body {Width:100vw;Height:100vh;Display:Inline-Flex;Justify-Content:Center;Text-Align:Left;Align-Items:Center;Margin:0%;Padding:0%;Overflow:Hidden;}
 body {background:#2f2f2f; font-family:Verdana; font-size:12px;}
 #wrap {width: 960px; background:#242424; padding:10px; margin:0 auto; border:1px solid #474747;}
 #sidebar {width: 160px; float: left; padding: 3px 4px; color: #fff; background-color: #2F2F2F; border:1px solid #474747; -moz-border-radius:8px;}
